bad/if_else_context_10.example_compiler_output
ERROR
[1mbad/if_else_context_10.lat:7:3: [1;31merror: [0;1muse of undeclared variable `y`[m
		y;
		[1;32m^[m
